# Hypnos

./: CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  LINUX.md  WINDOWS.md
src/: Color.h  MEMattePlugin.cpp  MatteEngine.cpp  MatteEngine.h  MemProbe.cpp  MemProbe.h  OomDetect.h  OrtAccel.h  Sizing.cpp  Sizing.h  Trimap.cpp  Trimap.h  WinLoader.cpp
test-assets/: README.md
tests/: oom_test.cpp  ort_check.cpp  sizing_test.cpp  trimap_test.cpp
tests/natron/: README.md  check_plugin.py  make_test_assets.py  render_matte.py
tools/: README.md  check_el8_abi.sh  export_mematte.py  fetch_models.ps1  fetch_models.sh  mematte_routing.py  requirements.txt  routing_equivalence_test.py  shape_dynamics_test.py
